kubernetes/apps/hermes/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hermes
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hermes.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: hermes
          port: 9119
  tls:
    secretName: legacy-home-wildcard-tls
